# Connect-Four-AI-Agent

./: .gitignore  AgentHuman.cpp  AgentHuman.h  AgentMinimaxAB.cpp  AgentMinimaxAB.h  AgentMinimaxABH.cpp  AgentMinimaxABH.h  AgentMinimaxBase.cpp  AgentMinimaxBase.h  AgentMinimaxTT.cpp  AgentMinimaxTT.h  BoardState.cpp  BoardState.h  CMakeLists.txt  GridBoardState.cpp  GridBoardState.h  README.md  main.cpp
